--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div style="text-align:center;">
   <p>Autor: {{autor2}}</p>
   <p>Fecha: {{  fecha2 | date: 'dd/MM/yyyy HH:mm:ss'}}</p>
-  <h3>================* CONTENEDOR 2 Backend *================</h3>
+  <h3>CONTENEDOR 2: Backend</h3>
   <p>Hostname: {{ host2 }}</p>
   <p>Status: {{status2}}</p>
   <p>Autor: {{autor2}}</p>
   <p>Fecha: {{  fecha2 | date: 'dd/MM/yyyy HH:mm:ss'}}</p>
 
-  <h3>================* CONTENEDOR 2 Backend *================</h3>
+  <h3>CONTENEDOR 3: Backend</h3>
   <p>Nombre del host: {{ host }}</p>
   <p>Status: Running</p>
   <p>Autor: {{ code }} {{ name }}</p>
